Add of the functions in list.C

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,9 @@ add_executable(CDataframes
         cdataframe.h
         sort.h
         sort.h
+        list.c
+        list.c
+        list.c
+        list.c
+        list.c
 )
